--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -38,8 +38,8 @@
    "id": "6cc1c1ac",
    "metadata": {},
    "source": [
-    "Albumentations es una librería que nos permite hacer transformaciónes de imágenes como técnica de data agumentation y cuenta con una documentación bien detallada con varios ejemplos para aprender a usar sus funciones.\\\n",
-    " Contiene funciones básicas como rotación, traslación y normalización pero además posee otras funcionalidades más complejas que permiten distorsionar la información para generar nuevas entradas como . Además, esta librería no solo funciona con simples imágenes en 2D si no que también permite trabajar con imágenes en 3D (como el caso de las imágenes médicas) y con videos. "
+    "Albumentations es una librería que nos permite hacer probabilísticamente transformaciónes de imágenes como técnica de data agumentation y cuenta con una documentación bien detallada con varios ejemplos para aprender a usar sus funciones. Esta es una técnica de regularización para que el modelo generalaice mejor y reducir el riesgo de overfitting.\\\n",
+    "Contiene funciones básicas como rotación, traslación y normalización pero además posee otras funcionalidades más complejas que permiten distorsionar la información para generar nuevas entradas como . Además, esta librería no solo funciona con simples imágenes en 2D si no que también permite trabajar con imágenes en 3D (como el caso de las imágenes médicas) y con videos. "
    ]
   },
   {
@@ -55,8 +55,7 @@
    "id": "f22a0ddd",
    "metadata": {},
    "source": [
-    "`A.Normalize()` es una transformación de Albumentations que aplica varias técnicas de normalización a una imagen para normalizar los valores de sus pixeles. La técnica de normalización específica (standard, image, image_per_channel, min_max, min_max_per_channel) puede seleccionarse con el parámetro normalization. En el caso de la standard se aplica: `img = (img - mean * max_pixel_value) / (std * max_pixel_value)` donde esos parámetros se deben asignar. \\\n",
-    "Esto es importante antes de entrenar una red ya que acelera el entrenamiento y evita que entradas de valores muy extremos tengan mucho peso al generar el gradiente. MEJORAR ESTA PARTE\n"
+    "`A.Normalize()` es una transformación de Albumentations que aplica varias técnicas para normalizar los valores de sus pixeles antes de ingresarlos a la red. La técnica de normalización específica (standard, image, image_per_channel, min_max, min_max_per_channel) puede seleccionarse con el parámetro normalization. Esta transformación convierte los valores de los píxeles, que pueden ir de 0 a 255, a una distribución normal al rededor del cero para cada canal. En el caso de la standard se aplica: `img = (img - mean) / std`. Esto favorece al modelo ya que las entradas quedan en una escala consistente y evita que ciertos canales dominen el aprendizaje por tener escalas más grandes."
    ]
   },
   {
@@ -96,8 +95,7 @@
    "id": "289ec934",
    "metadata": {},
    "source": [
-    "NO ENTIENDO LA PREGUNTA, TODAVIA NO VIMOS CNN.\\\n",
-    "Para la clasificación y procesamiento de imágenes una CNN suele ser la solución más elegída. En este caso usamos un MLP que consiste en un modelo más simple y fácil de implementar, dado que las imágenes se redimensionan a un tamaño pequeño (64x64x3) para poder manejar la cantidad de datos, pero por lo general no es una estrategia elegida dado que una imagen tiene patrones espaciales que la caracterizan (como su textura o bordes específicos) que en este caso, al convertirlo en un vector 1D después del ´flatten´ se pierde esa información estructural que puede ser importante en el caso de querer detectar por ejemplo anomalías en la piel o en muchos casos médicos."
+    "Para la clasificación y procesamiento de imágenes una CNN suele ser la solución más elegída. Si bien el MLP se trata de un modelo más simple y fácil de implementar, no es una buena estrategia para la clasificación y análisis de imagenes dado que estas tiene patrones espaciales que la caracterizan (como su textura o bordes específicos) que en este caso, al convertirlo en un vector 1D después del ´flatten´, perdemos esa información estructural que puede ser importante en el caso de querer detectar por ejemplo anomalías en la piel o en muchos casos médicos. Por lo que no tiene mucho sentido esta estrategia."
    ]
   },
   {
@@ -200,7 +198,7 @@
    "id": "0cce1c3e",
    "metadata": {},
    "source": [
-    "El batch size (BS) "
+    "El batch size (BS) es la cantidad de datos que se procesan en la red, antes de ajustar los pesos por backpropagation. Lo que se hace es dividir al conjunto de datos totales del entrenamiento en N grupos con una cantidad BS de datos, y el modelo va a procesar cada batch hasta cubrir todos los datos (1 epoch). Esto es un hiperparámetro que hay que ajustar dado que afecta principalmente la dinámica del modelo ya que determina la frecuencia de actualización de pesos y la capcaidad de generalización del modelo. Un BS grande permite actualizaciones más estables y acelera el entrenamiento pero se puede perder generalización si es muy grande, mientras que un BS pequeño permite actualizaciones más frecuentes y ruidosas, tiene mejor capacidad de generalización pero es más lento por época (tarda mas en entrenar con todos los datos)."
    ]
   },
   {
@@ -257,6 +255,8 @@
    "id": "efd01da3",
    "metadata": {},
    "source": [
+    "la pérdida (loss), la precisión (accuracy), la tasa de aprendizaje y otros indicadores relevantes\n",
+    "\n",
     "Las métricas más relevantes depende del problema a resolver, suele resultar útil complementar la métrica de accuracy con otras como:\n",
     "- Precision: proporción de predicciones positivas que fueron correctas. Un modelo con alta precisión minimiza falsos positivos.\n",
     "- Recall: Los positivos reales que detectó el modelo. Importa dependiendo del costo de los falsos negativos.\n",
@@ -312,7 +312,234 @@
    "cell_type": "markdown",
    "id": "853d44e7",
    "metadata": {},
+   "source": [
+    "Tensorboard permite visualizar en tiempo real la dinámica del entrenamiento a través de métricas como la loss, el accuracy, entre otros. Esta visualización facilita la detección de problemas como overfitting o underfitting, y ayuda a entender mejor el comportamiento del modelo frente a distintos ajustess. Además, nos permite llevar un registro organizado de cada run, para comparar mejor los resultado al variar diferentes hiperparámetos.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06f91d7f",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué diferencias hay entre loguear `add_scalar`, `add_image` y `add_text`?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18bf9001",
+   "metadata": {},
+   "source": [
+    "Por medio de distintas funciones podemos loguear distintos tipos de resultados que vamos obteniendo al entrenar la red. En este caso `add_scalar` permite guardar valores numéricos que podrían ser las métricas (loss, accuracy); `add_image` es apra guardar y visualizatr imágenes. Por último, `add_text` permite registrar texto como comentarios, detalles o anotaciones, útil para documentar los resultados obtenidos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3307a0c",
+   "metadata": {},
+   "source": [
+    "**- ¿Por qué es útil guardar visualmente las imágenes de validación en TensorBoard?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "109954b7",
+   "metadata": {},
+   "source": [
+    "Guardar las imágenes de validación es útil porque podemos evaluar visualmente lo que el modelo hizo de manera cuantitativa. En si, el objetivo es encontrar el modelo que logra clasificar las imágenes de diagnóstico médico con mejor presición, por lo que la interpretación visual en este contexto es importante y sirve poder comparar de manera directa en qué imágenes falla más veces y ver si las predicciones desde otro punto de vista tienen sentido."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db9ea7ad",
+   "metadata": {},
+   "source": [
+    "**- ¿Cómo se puede comparar el desempeño de distintos experimentos en TensorBoard?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "960ef84f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "REVISAR\n",
+    "\n",
+    "\n",
+    "Para comparar el desempeño de distintos experimentos en TensorBoard, se pueden guardar los registros de cada entrenamiento en carpetas separadas, especificando un nombre que refleje los hiperparámetros utilizados (por ejemplo, tasa de aprendizaje o tamaño del batch). Luego, al ejecutar TensorBoard sobre la carpeta principal que contiene todos los experimentos, la interfaz detecta automáticamente las distintas ejecuciones y permite visualizar sus curvas de métricas en conjunto. De esta forma, es posible superponer gráficos de loss, accuracy u otras métricas y evaluar cuál configuración del modelo produjo mejores resultados. Esta funcionalidad resulta fundamental para el análisis comparativo y la toma de decisiones durante la etapa de ajuste del modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "869c92d6",
+   "metadata": {},
+   "source": [
+    "# 6. Generalización y Transferencia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d98da5c",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué cambios habría que hacer si quisiéramos aplicar este mismo modelo a un dataset con 100 clases?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edea5f06",
+   "metadata": {},
+   "source": [
+    "En primer lugar, la última capa debería tener 100 neuronas en lugar de 10, esto es debido a que cada neurona de la última capa devuelve el score de pertenencia a una determinada clase. Con esto ya se puede re-entrenar la red (los pesos ya no serían los mismos) pero probablemente el modelo no sea lo suficientemente complej como para distinguir las 100 clases, por lo que habría que modificar la profundidad del mismo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8649ad6e",
+   "metadata": {},
+   "source": [
+    "**- ¿Por qué una CNN suele ser más adecuada que una MLP para clasificación de imágenes?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aeefbff",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc817c2",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué problema podríamos tener si entrenamos este modelo con muy pocas imágenes por clase?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "419b1326",
+   "metadata": {},
+   "source": [
+    "Si entrenamos el modelo de esta forma es probable que memorice las pocas imágenes de entrenamiento en lugar de aprender patrones generales, provocando que no generalice bien al ver entradas nuevas.\n",
+    "Además, con muy pocos ejemplos, es probable que las imágenes no representen bien la variabilidad natural de esa clase (cambios de iluminación, ángulos, escalas, fondos, etc.). Como resultado, el modelo aprenderá una versión sesgada de cada clase, lo que reduce su capacidad para reconocer correctamente nuevas instancias de esa misma clase. El data augmentation podría ayudar un poco con este problema."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99422715",
+   "metadata": {},
+   "source": [
+    "**- ¿Cómo podríamos adaptar este pipeline para imágenes en escala de grises?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3395379",
+   "metadata": {},
+   "source": [
+    "El pipeline en general sería el mismo, una imagen en escala de grises tiene profundidad de pixel igual a 1, mientras que a color 3. Por lo tanto, la única modificación es que el input size pasa a ser un tercio del original."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54892c6",
+   "metadata": {},
+   "source": [
+    "# 7. Regularización"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d01634b",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué es la regularización en el contexto del entrenamiento de redes neuronales?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80ef40ae",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8122ea9e",
+   "metadata": {},
+   "source": [
+    "**- ¿Cuál es la diferencia entre `Dropout` y regularización `L2` (weight decay)?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85e8c79f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b77f8039",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué es `BatchNorm` y cómo ayuda a estabilizar el entrenamiento?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "784d733f",
+   "metadata": {},
+   "source": [
+    "Batch Normalization es un técnica de regularización que se utiliza para escalar un batch según la media y el desvio del i componente de los N vectores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f5b0e37",
+   "metadata": {},
+   "source": [
+    "**- ¿Cómo se relaciona `BatchNorm` con la velocidad de convergencia?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac43c3f2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c43cc4ee",
+   "metadata": {},
+   "source": [
+    "**- ¿Puede `BatchNorm` actuar como regularizador? ¿Por qué?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e0f91ec",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2e29d0a",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué efectos visuales podrías observar en TensorBoard si hay overfitting?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec53d1b7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45647e8d",
+   "metadata": {},
+   "source": [
+    "**- ¿Cómo ayuda la regularización a mejorar la generalización del modelo?**"
+   ]
   }
  ],
  "metadata": {
