--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -404,7 +404,9 @@
    "cell_type": "markdown",
    "id": "3aeefbff",
    "metadata": {},
-   "source": []
+   "source": [
+    "Como ya mencionamos antes, el MLP no es adecuado para clasificar imágenes dado que requiere que la entrada sea un vector 1D, y por lo tanto al hacerle este flatten perdemos la información espacial que caracteriza la imágen. Con una CNN, por otro lado, podemos ingresar a la red directamente con la imágen original"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -459,7 +461,9 @@
    "cell_type": "markdown",
    "id": "80ef40ae",
    "metadata": {},
-   "source": []
+   "source": [
+    "La regularización hace referencia a las técnicas que se pueden emplear (con diferentes hiperarametros ajustables) para asegurar que la red generalice bien, ya que en redes neurnales el primer problema es que el modelo converja a una solución y el segundo es que esa solución generalice bien la realidad."
+   ]
   },
   {
    "cell_type": "markdown",
