--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -546,6 +546,246 @@
    "source": [
     "**- ¿Cómo ayuda la regularización a mejorar la generalización del modelo?**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7891260",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04108932",
+   "metadata": {},
+   "source": [
+    "## Preguntas Prácticas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b78c101b",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué efecto tuvo `BatchNorm` en la estabilidad y velocidad del entrenamiento?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "307cca99",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5ed8a31",
+   "metadata": {},
+   "source": [
+    "**- ¿Cambió la performance de validación al combinar `BatchNorm` con `Dropout`?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e6947e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b22cc8f4",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué combinación de regularizadores dio mejores resultados en tus pruebas?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a3978bc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd96763e",
+   "metadata": {},
+   "source": [
+    "**- ¿Notaste cambios en la loss de entrenamiento al usar `BatchNorm`?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55dc95fb",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90d7b84f",
+   "metadata": {},
+   "source": [
+    "# 8. Inicialización de Parámetros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a89fb218",
+   "metadata": {},
+   "source": [
+    "**- ¿Por qué es importante la inicialización de los pesos en una red neuronal?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afe5c2f7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fd453c0",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué podría ocurrir si todos los pesos se inicializan con el mismo valor?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7412cd23",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48770c63",
+   "metadata": {},
+   "source": [
+    "**- ¿Cuál es la diferencia entre las inicializaciones de Xavier (Glorot) y He?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a681eb80",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "600a170a",
+   "metadata": {},
+   "source": [
+    "**- ¿Por qué en una red con ReLU suele usarse la inicialización de He?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16381f31",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c879d3de",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué capas de una red requieren inicialización explícita y cuáles no?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c1c1e11",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d49069c1",
+   "metadata": {},
+   "source": [
+    "## Preguntas prácticas:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7ce8ed8",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué diferencias notaste en la convergencia del modelo según la inicialización?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65de13fd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b028c866",
+   "metadata": {},
+   "source": [
+    "**- ¿Alguna inicialización provocó inestabilidad (pérdida muy alta o NaNs)?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3bc7a2e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53fb9c87",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué impacto tiene la inicialización sobre las métricas de validación?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7640f75a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "630fad23",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué impacto tiene la inicialización sobre las métricas de validación?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3809a59b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "863ef357",
+   "metadata": {},
+   "source": [
+    "**- ¿Qué impacto tiene la inicialización sobre las métricas de validación?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "027f4155",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fedf47db",
+   "metadata": {},
+   "source": [
+    "**- ¿Por qué `bias` se suele inicializar en cero?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2833e60",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
