--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -462,7 +462,7 @@
    "id": "80ef40ae",
    "metadata": {},
    "source": [
-    "La regularización hace referencia a las técnicas que se pueden emplear (con diferentes hiperarametros ajustables) para asegurar que la red generalice bien, ya que en redes neurnales el primer problema es que el modelo converja a una solución y el segundo es que esa solución generalice bien la realidad."
+    "La regularización hace referencia a las técnicas que se pueden emplear, con diferentes hiperarametros ajustables, para evitar el overfitting y asegurar que la red generalice bien; ya que en redes neuronales el primer problema es que el modelo converja a una solución y el segundo es que esa solución generalice bien la realidad. Esto emplea restircciones o penalizaciones en el entrenamiento, que es cuando la red está aprendiendo, para generar un modelo robusto y que no solamente memorice los datos.\n"
    ]
   },
   {
@@ -494,7 +494,7 @@
    "id": "784d733f",
    "metadata": {},
    "source": [
-    "Batch Normalization es un técnica de regularización que se utiliza para escalar un batch según la media y el desvio del i componente de los N vectores"
+    "Batch Normalization es un técnica de agilización de entrenamiento que se utiliza para escalar un batch según la media y el desvio del i componente de los N vectores"
    ]
   },
   {
