--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -523,7 +523,11 @@
    "cell_type": "markdown",
    "id": "3e0f91ec",
    "metadata": {},
-   "source": []
+   "source": [
+    "Dado que BatchNorm promedia por mini-batch y no el total de observaciones, el cálculo de\n",
+    "la media y varianza es ruidoso. Esto tiene un leve efecto de regularización ya\n",
+    "que es como si cada nuevo batch se moviera levemente respecto al anterior."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -537,7 +541,10 @@
    "cell_type": "markdown",
    "id": "ec53d1b7",
    "metadata": {},
-   "source": []
+   "source": [
+    "El overfitting es visile en el gráfico de accuracy. Se puede ver como al principio del entrenamiento tanto el accuracy de train como validacion mejoran, pero despues de un tiempo divergen y el accuracy de validacion empeora notablemente. \n",
+    "Otra forma de visualizar overfitting es con el histograma de pesos, un indicio es si se tiene un alto numero de neuronas con pesos muy grandes en modulo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -551,7 +558,9 @@
    "cell_type": "markdown",
    "id": "a7891260",
    "metadata": {},
-   "source": []
+   "source": [
+    "La regularización ayuda a la generalizacion del modelo impidiendo que este memorice el dataset de entrenamiento. Esto se hace principalmente agregando ruido en la etapa de entrenamiento (dropout o data augmentation), o imponiendo restricciones explicitas en la dinamica de entranamiento (weigth decay, early stopping). De esta forma se minimiza el riesgo de overfitting."
+   ]
   },
   {
    "cell_type": "markdown",
