--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -333,6 +333,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0cf6ae1",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "d3307a0c",
    "metadata": {},
@@ -660,7 +672,9 @@
    "cell_type": "markdown",
    "id": "7412cd23",
    "metadata": {},
-   "source": []
+   "source": [
+    "Si todos los pesos se inicializan con el mismo valor, la red no puede aprender correctamente, ya que todas las neuronas tendrian el mismo output y recibirían el mismo gradiente. Esto mantiene la simetría entre ellas, impidiendo que aprendan representaciones distintas."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -674,7 +688,23 @@
    "cell_type": "markdown",
    "id": "a681eb80",
    "metadata": {},
-   "source": []
+   "source": [
+    "Glorot esta pensado para funciones de activación simétricas alrededor de cero, como tanh o sigmoid. La ventaja de esta inicialización es que mantiene la varianza constante entre las activaciones y los gradientes a través de las capas.\n",
+    "\n",
+    "Para una neurona con fan_in entradas y fan_out salidas se definen:\n",
+    "\n",
+    "Glorot uniforme: $W \\sim \\mathcal{U}\\left(-\\sqrt{\\frac{6}{\\text{fan\\_in} + \\text{fan\\_out}}}, \\ \\sqrt{\\frac{6}{\\text{fan\\_in} + \\text{fan\\_out}}} \\right)$\n",
+    "\n",
+    "Glorot normal: $W \\sim \\mathcal{N}\\left(0, \\ \\frac{2}{\\text{fan\\_in} + \\text{fan\\_out}} \\right)$\n",
+    "\n",
+    "Por otro lado, la inicialización He fue diseñada específicamente para la función de activación ReLu y sus variantes. Busca compensar la pérdida de varianza por ReLU\n",
+    "\n",
+    "Las distribuciones son las siguientes:\n",
+    "\n",
+    "He uniforme: $W \\sim \\mathcal{U}\\left(-\\sqrt{\\frac{6}{\\text{fan\\_in}}}, \\ \\sqrt{\\frac{6}{\\text{fan\\_in}}} \\right)$\n",
+    "\n",
+    "He Normal: $W \\sim \\mathcal{N}\\left(0, \\ \\frac{2}{\\text{fan\\_in}} \\right)$\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -688,7 +718,10 @@
    "cell_type": "markdown",
    "id": "16381f31",
    "metadata": {},
-   "source": []
+   "source": [
+    "La funcion ReLU(x)=max(0,x), esto anula todas las activaciones negativas. Si la entrada tiene distribución simétrica alrededor de cero, el 50% de las activaciones serán cero (en promedio). Eso hace que, a medida que se avanza por la red, las activaciones se vuelvan muy pequeñas, generandose una perdida en la varianza.\n",
+    "La inicialización He aumenta la varianza inicial (al doble) para que tras aplicar ReLU, la varianza de las activaciones se mantenga estable.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -702,7 +735,9 @@
    "cell_type": "markdown",
    "id": "9c1c1e11",
    "metadata": {},
-   "source": []
+   "source": [
+    "Todas las capas que tengan pesos requieren de una inizialización."
+   ]
   },
   {
    "cell_type": "markdown",
