--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -255,12 +255,11 @@
    "id": "efd01da3",
    "metadata": {},
    "source": [
-    "la pérdida (loss), la precisión (accuracy), la tasa de aprendizaje y otros indicadores relevantes\n",
+    "EL \"accuracy\" no siempre refleja el verdadero rendimiento de un modelo, especialmente en casos con clases desbalanceadas, por lo tanto puede ser relevante complementarlo con otras métricas como:\n",
+    "- La loss o función de perdida, que permite ver la correspondencia 1 a 1 entre la estimación y la anotación, se usa para visualizar como se confunde el modelo en el entrenamiento y validación.\n",
     "\n",
-    "Las métricas más relevantes depende del problema a resolver, suele resultar útil complementar la métrica de accuracy con otras como:\n",
-    "- Precision: proporción de predicciones positivas que fueron correctas. Un modelo con alta precisión minimiza falsos positivos.\n",
-    "- Recall: Los positivos reales que detectó el modelo. Importa dependiendo del costo de los falsos negativos.\n",
-    "- F1 score: Balance entre precisión y recall, relevante cuando el costo de los errores es similar en ambas direcciones.\n",
+    "\n",
+    "para ver cuánto se está equivocando el modelo durante el entrenamiento y validación\n",
     "\n"
    ]
   },
@@ -290,7 +289,12 @@
    "cell_type": "markdown",
    "id": "22d95f0c",
    "metadata": {},
-   "source": []
+   "source": [
+    "Las métricas más relevantes depende del problema a resolver, suele resultar útil complementar la métrica de accuracy con otras como:\n",
+    "- Precision: proporción de predicciones positivas que fueron correctas. Un modelo con alta precisión minimiza falsos positivos.\n",
+    "- Recall: Los positivos reales que detectó el modelo. Importa dependiendo del costo de los falsos negativos.\n",
+    "- F1 score: Balance entre precisión y recall, relevante cuando el costo de los errores es similar en ambas direcciones.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -506,7 +510,7 @@
    "id": "784d733f",
    "metadata": {},
    "source": [
-    "Batch Normalization es un técnica de agilización de entrenamiento que se utiliza para escalar un batch según la media y el desvio del i componente de los N vectores"
+    "Batch Normalization es un técnica de agilización de entrenamiento que se utiliza para escalar un batch de salida de cada capa según la media y el desvio de ese conjunto de datos en paralelo. Esto soluciona el problema del Internal Covariate Shift (cambio en la distribución de salida de las activaciones de la red porque al sumar capas se mueven hacia los extremos y se encaja el proceso), ya que al normalizar la salida de cada capa antes de pasar a la siguiente, lo volvemos a centrar con una distribución normal al rededor del cero."
    ]
   },
   {
@@ -521,7 +525,9 @@
    "cell_type": "markdown",
    "id": "ac43c3f2",
    "metadata": {},
-   "source": []
+   "source": [
+    "Además de trabajr en batches, al normalizar cada capa, logramos tener entradas más estables lo que le permite al modelo utilizar un learning rate mayor sin riesgo de que explote y logra aprender más rápido. Además, al meter un poco de ruido, evitamos mínimos locales que pueden dar lugar al overfiting."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -538,7 +544,7 @@
    "source": [
     "Dado que BatchNorm promedia por mini-batch y no el total de observaciones, el cálculo de\n",
     "la media y varianza es ruidoso. Esto tiene un leve efecto de regularización ya\n",
-    "que es como si cada nuevo batch se moviera levemente respecto al anterior."
+    "que es como si cada nuevo batch se moviera levemente respecto al anterior y entonces el entrenamiento resulta más estable."
    ]
   },
   {
@@ -829,7 +835,10 @@
    "cell_type": "markdown",
    "id": "d2833e60",
    "metadata": {},
-   "source": []
+   "source": [
+    "El bias permite realizar un desplazamiento en la función de activación para que se ajuste mejor a los datos, por lo que la red puede ajustar la salida incluso si todas las entradas son cero.\n",
+    "A diferencia de los pesos, que deben ser distintos para romper con la simetría, el bias suele iniciarse en cero para no sesgar a la red desde el inicio hacía una salida y la red lo irá ajustando el bias en el aprendizaje por backpropagation. Esto es posible ya que los pesos son aleatroios y por lo tanto cada neurona sigue tienendo la capacidad de aprender algo distinto."
+   ]
   }
  ],
  "metadata": {
