--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -183,7 +183,9 @@
    "cell_type": "markdown",
    "id": "02ec5019",
    "metadata": {},
-   "source": []
+   "source": [
+    "Usamos `CrossEntropyLoss()` porque estamos trabajando con una clasificación multiclase, por lo que queremos que el modelo a la salida entregue una probabilidad de pertenencia para cada clase. Aunque el MLP termina con una capa de logits (valores sin normalizar), esta función aplica internamente softmax y calcula la pérdida de forma estable. Además, la entropía cruzada mide qué tan lejos está la predicción de la clase verdadera, cuanto más cerca esté la probabilidad asignada a la clase correcta de 1, menor será la pérdida."
+   ]
   },
   {
    "cell_type": "markdown",
