--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -337,18 +337,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0cf6ae1",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "d3307a0c",
    "metadata": {},
@@ -664,7 +652,9 @@
    "cell_type": "markdown",
    "id": "afe5c2f7",
    "metadata": {},
-   "source": []
+   "source": [
+    "Inicializar los pesos en una red neuronal es importante porque determina las primeras etapas del entrenamiento. Una mala inicialización puede causar vanishing o exploding gradients, lo que puede dificultar o estancar el entrenamiento. Por otro lado, una buena inicialización rompe la simetría entre neuronas, permitiendo que cada una aprenda funciones distintas."
+   ]
   },
   {
    "cell_type": "markdown",
